2020-07-29  Jonathan Bedard  <jbedard@apple.com>

        [webkitcorepy] Add an auto-installer
        https://bugs.webkit.org/show_bug.cgi?id=214606

        Reviewed by Darin Adler.

        Add an autoinstaller to webkitcorepy. This is eventually intended to replace the
        autoinstaller in webkitpy.

        * Scripts/libraries: Added property svn:ignore.
        * Scripts/libraries/webkitcorepy/README.md:
        * Scripts/libraries/webkitcorepy/webkitcorepy/__init__.py:
        * Scripts/libraries/webkitcorepy/webkitcorepy/autoinstall.py: Added.
        (Package): Class representing a single Python module.
        (Package.Archive): Class representing a zip file containing a package.
        (Package.Archive.__init__): Construct representation with a name, version and
        downloadable link.
        (Package.Archive.__repr__): Archives are named based on their package name
        and version.
        (Package.Archive.path): The location of  a downloaded archive on disk.
        (Package.Archive.download): Download archive and write contents to disk.
        (Package.Archive.unpack): Unpack archive on disk into package.
        (Package.__init__): Packages are constructed with a name, version and name on
        PyPi, which is assumed to be the package name unless specified.
        (Package.location): Location of the package on disk.
        (Package.do_post_install): Some packages have post-install actions, execute
        those.
        (Package.archives): Return a list of archives which match the specified
        package parameters.
        (Package.is_cached): Check the AutoInstall manifest to see if a package has
        already been installed.
        (Package.install): If needed, find a compatible archive for the specified
        package, download and install it.
        (AutoInstall): Namespace for auto-install functionality.
        (AutoInstall._request): Make a request to the package index specified.